FIX: spacing and text

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -855,7 +855,6 @@ body.menu-active .entry-banner-index {
   width:100vw;
   border-top:1px solid var(--color-bg-tertiary);
   padding: var(--space-lg) 0 0 var(--space-lg);
-  margin: var(--space-xl) 0;
   box-sizing:border-box;
   display:flex;
   flex-wrap:wrap;
